Better selector on post to, fixed double borders

--- a/chrome/templates/comments/comments.css
+++ b/chrome/templates/comments/comments.css
@@ -207,7 +207,6 @@ div.more-recipient-list {
   padding: 10px;
   line-height: 14px;
   border-top: 1px solid #e5e5e5;
-  border-bottom: 1px solid #e5e5e5;
   display: block;
 }
 
